# Handy

docs/: voice-integration-comparison-report-zh-print.html  voice-integration-comparison-report-zh.html  voice-integration-comparison-report.html
voice-stack/: README.md  agent-meow.spec  build-voice-stack.ps1  install-voice-stack.ps1  voicebox.spec
voice-stack/tauri-wrapper/: index.html  package.json  vite.config.ts
voice-stack/tauri-wrapper/src/: App.tsx  index.css
voice-stack/tauri-wrapper/src-tauri/: Cargo.toml  tauri.conf.json
voice-stack/tauri-wrapper/src-tauri/capabilities/: default.json
voice-stack/tauri-wrapper/src-tauri/src/: lib.rs  main.rs
