[package]
name = "voice-stack"
version = "0.1.0"
description = "Voice Stack — all-in-one installer for Handy + Voicebox + agent-meow"
authors = ["Voice Stack"]
edition = "2021"

[lib]
name = "voice_stack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
log = "0.4"
env_logger = "0.11"
which = "6"

[features]
custom-protocol = ["tauri/custom-protocol"]